# Full-Stack-Todo-App-Next.js-FastAPI-

./: README.md
todo-frontend/: package-lock.json  package.json  pnpm-lock.yaml
todo-frontend/src/app/: layout.tsx  page.tsx
todo-frontend/src/components/: AddTodoForm.tsx  Todo.tsx
todoApp/: Dockerfile.dev  pyproject.toml
todoApp/app/: main.py  settings.py
todoApp/tests/: test_addTodo.py  test_add_todo.py  test_deleteTodo.py  test_delete_todo.py  test_getTodoById.py  test_getTodos.py  test_get_todos.py  test_main.py  test_updateTodo.py  test_update_todo.py
