[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Asad Subhani <asadsubhani77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.1"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
psycopg2 = "^2.9.9"
sqlmodel = "^0.0.16"
requests = "^2.31.0"
pytest = "^8.1.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
